# whatsapp-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  wapair-session.json
crates/wabin/: Cargo.toml
crates/wabin/src/: codec.rs  lib.rs  token.rs
crates/waclient/: Cargo.toml
crates/waclient/src/: device.rs  jid.rs  lib.rs  pairing.rs  phone.rs  session.rs
crates/wademo/: Cargo.toml
crates/wademo/src/: main.rs
crates/wanoise/: Cargo.toml
crates/wanoise/src/: frame.rs  handshake.rs  lib.rs  noise.rs
crates/wapair/: Cargo.toml
crates/wapair/src/: main.rs
crates/waproto/: Cargo.toml
crates/waproto/src/: adv.rs  client_payload.rs  handshake.rs  lib.rs  message.rs  pb.rs
crates/wasignal/: Cargo.toml
crates/wasignal/src/: lib.rs  pcrypto.rs  ratchet.rs  xeddsa.rs
docs/: ARCHITECTURE.md
tools/: gate-hunt.ps1
