[workspace]
resolver = "2"
members = [
    "crates/wabin",
    "crates/wanoise",
    "crates/wademo",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Darshankumar Joshi <globalnamh@gmail.com>"]
repository = "https://github.com/darshjme/whatsapp-rs"
rust-version = "1.82"

[workspace.dependencies]
thiserror = "2"
snow = "0.9"
