[package]
name = "wasignal"
version = "0.1.0"
description = "Signal-protocol crypto for WhatsApp: Curve25519 XEdDSA signatures (and, later, sessions)"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["whatsapp", "signal", "xeddsa", "curve25519", "crypto"]
categories = ["cryptography"]

[dependencies]
curve25519-dalek = "4"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
aes = "0.8"
ctr = "0.9"
aes-gcm = "0.10"
getrandom = "0.2"

[dev-dependencies]
ed25519-dalek = "2"
